# rest-api

./: .python-version  pyproject.toml
config/: Token Authentication.ipynb  authentication.ipynb  db.sqlite3  pygments 알아보기.ipynb  serializer.ipynb
config/.ipynb_checkpoints/: authentication-checkpoint.ipynb  pygments 알아보기-checkpoint.ipynb  serializer-checkpoint.ipynb
config/config/: settings.py  urls.py
config/members/: apis.py  models.py  tests.py  urls.py
config/snippets/: apis.py  models.py  serializers.py  test.py  urls.py  views.py
config/snippets/apis/: __init__.py  generics.py  mixins.py  viewsets.py
config/snippets/migrations/: 0001_initial.py  0002_snippet_author.py  0003_auto_20200212_0611.py
